@@ -1,5 +1,8 @@
 package com.localagent.engine.tools;
 
+import com.localagent.engine.beans.config.AgentConfig;
+import com.localagent.engine.utils.StringUtils;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -9,7 +12,7 @@ public final class ToolRegistry {
     private ToolRegistry() {
     }
 
-    public static List<AgentTool> loadTools(String agentName, List<String> enabled, Map<String, Object> toolConfigs, Map<String, Object> agentConfig) {
+    public static List<AgentTool> loadTools(String agentName, List<String> enabled, Map<String, Map<String, Object>> toolConfigs, AgentConfig agentConfig) {
         List<AgentTool> tools = new ArrayList<>();
         ServiceLoader<ToolProvider> loader = ServiceLoader.load(ToolProvider.class);
         for (ToolProvider provider : loader) {
@@ -17,14 +20,13 @@ public final class ToolRegistry {
                 continue;
             }
             String toolName = provider.toolName();
-            if (toolName == null || toolName.isBlank()) {
+            if (StringUtils.isBlank(toolName)) {
                 continue;
             }
-            if (enabled != null && !enabled.isEmpty() && !enabled.contains(toolName)) {
+            if (!enabled.contains("ALL") && !enabled.contains(toolName)) {
                 continue;
             }
-            Object configValue = toolConfigs == null ? null : toolConfigs.get(toolName);
-            Map<String, Object> toolConfig = configValue instanceof Map<?, ?> map ? (Map<String, Object>) map : Map.of();
+            Map<String, Object> toolConfig = toolConfigs == null ? null : toolConfigs.get(toolName);
             AgentTool tool = provider.create(toolConfig, agentConfig);
             if (tool == null) {
                 continue;
